<resources>
    <string name="app_name">Pulse Tracker</string>

    <!-- Login content -->
    <string name="sign_in_text">Sign-IN</string>
    <string name="sign_out_text">Sign-OUT</string>
    <string name="sign_in_with_text">Sign-IN with</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Never here? Sign-Up</string>
    <string name="second_name">Second Name</string>
    <string name="email_text">E-MAIL</string>
    <string name="password_text">Password</string>
    <string name="create_one_text">Create One?</string>
    <string name="google_text">Google</string>
    <string name="facebook_text">Facebook</string>
    <string name="name_text">Name</string>

    <!-- App Content -->
    <string name="location_word">Location</string>
    <string name="find_doctor_text">Doctor</string>
    <string name="search_text">Search</string>
    <string name="home_text">Home</string>

    <string name="profile_text">Profile</string>
    <string name="setting_text">Setting</string>
    <string name="log_out_text">Log Out</string>
    <string name="title_activity_maps">Map</string>

    <!-- Post Content -->
    <string name="Write_your_comment">Write your comment</string>
    <string name="Post">Post</string>
    <string name="Comment_Button">Comment</string>
    <string name="Like_thumb_up">Like</string>
    <string name="comments_number">Comments</string>
    <string name="likers">Likes</string>

    <!-- Auth -->
    <string name="facebook_app_id">271537763338180</string>
    <string name="fb_login_protocol_scheme">fb271537763338180</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
