<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HOME"
            android:textSize="36sp"
            />
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="4"
            android:layout_above="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">
            <EditText
                android:id="@+id/patientComment"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/commentButton"
                android:text="Post"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/home_button1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:gravity="center"
                android:clickable="true"
                android:textSize="16sp"
                android:drawableTop="@drawable/home"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/location_button1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/location_word"
                android:gravity="center"
                android:clickable="true"
                android:textSize="16sp"
                android:drawableTop="@drawable/locationicon"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/doctor_button1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/find_doctor_text"
                android:gravity="center"
                android:clickable="true"
                android:textSize="16sp"
                android:drawableTop="@drawable/stethoscopeicon"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/search_button1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/search_text"
                android:gravity="center"
                android:clickable="true"
                android:textSize="16sp"
                android:drawableTop="@drawable/searchicon"
                android:layout_weight="1"

                />


        </LinearLayout>
        <!-- android:focusable="true" to make a list view item clickable -->
        <ListView
            android:id="@+id/listViewComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_above="@+id/linearLayout2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>